2014-01-14  Dan Bernstein  <mitz@apple.com>

        Only use color in make output when it’s going to a terminal.

        Reviewed by Mark Rowe.

        * Makefile.shared:

2014-01-13  Martin Robinson  <mrobinson@igalia.com>

        [CMake] Mark all dependency include paths and libraries as advanced variables
        https://bugs.webkit.org/show_bug.cgi?id=126504

        Reviewed by Daniel Bates.

        * Source/cmake/FindATK.cmake: Mark result variable as advanced.
        * Source/cmake/FindCairo.cmake: Ditto.
        * Source/cmake/FindEGL.cmake: Ditto.
        * Source/cmake/FindEnchant.cmake: Ditto.
        * Source/cmake/FindGLIB.cmake: Ditto.
        * Source/cmake/FindGStreamer.cmake: Ditto.
        * Source/cmake/FindHarfBuzz.cmake: Ditto.
        * Source/cmake/FindLibSoup.cmake: Ditto.

2014-01-13  Martin Robinson  <mrobinson@igalia.com>

        [GTK][CMake] Add a 'check' target
        https://bugs.webkit.org/show_bug.cgi?id=126770

        Reviewed by Daniel Bates.

        * Source/PlatformGTK.cmake: Add a 'check' target that calls run-gtk-tests.

2014-01-13  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update NEWS and Versions.m4 for 2.3.4 release.

        * Source/autotools/Versions.m4: Bump version numbers.

2014-01-12  Sergio Correia  <sergio.correia@openbossa.org>

        [EFL][WK2] Make API tests work again
        https://bugs.webkit.org/show_bug.cgi?id=126769

        Reviewed by Gyuyoung Kim.

        The EFL and WK2 test binaries are currently being generated at *TestWebKitAPI/
        [E]WebKit2, respectively, and this causes problems because the logic to find
        where WebProcess is to look in the same directory of the running process and
        then proceed to use LIBEXECDIR (typically /usr/loca/bin).

        This patch introduces a WEBKIT_EXEC_PATH environment variable, inspired in the
        Gtk port, which allows us to look for WebProcess initially in this directory,
        if it's defined.
